# bear

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.txt  docker-compose.yml  serv.cabal  serv.yaml  stack.yaml
app/: Main.hs
src/Serv/: Api.hs  Server.hs
src/Serv/Api/: Auth.hs  EntityApi.hs  EntityTypes.hs  Types.hs
src/Serv/Server/: ServerEnv.hs
src/Serv/Server/Core/: Config.hs  HealthApi.hs  HealthHandler.hs  HealthTypes.hs  InfoApi.hs  Logger.hs  ManagmentAuth.hs  Metrics.hs  MetricsApi.hs  MetricsHandler.hs  Runtime.hs  ServerConfig.hs
src/Serv/Server/Core/Config/: ConfigData.hs  ConfigLoader.hs  LogData.hs  ManagementData.hs  ServerConfigData.hs  ServerData.hs  Types.hs
src/Serv/Server/Features/: EntityHandler.hs  Runtime.hs
src/Serv/Util/: GenericMonoid.hs  Validate.hs
src/Servant/: Ekg.hs
src/Servant/Extentions/: Server.hs
