name:                serv
version:             0.1.0.0
synopsis:            HTTP API Server
description:         Please see README.md
homepage:            https://github.com/orangefiredragon/serv#readme
license:             BSD3
license-file:        LICENSE
author:              Petr Makagon
maintainer:          petr.makagon@somewhere
copyright:           (c) 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Serv.Api
                     , Serv.Api.Auth
                     , Serv.Server.Core.HealthTypes
                     , Serv.Server.Core.HealthApi
                     , Serv.Api.EntityTypes
                     , Serv.Api.EntityApi
                     , Serv.Server.Core.MetricsApi
                     , Serv.Server.Core.ServerConfig
                     , Serv.Server.Core.HealthHandler
                     , Serv.Server.Core.MetricsHandler
                     , Serv.Server
                     , Serv.Server.Core.Metrics
                     , Serv.Server.Features.Runtime
                     , Serv.Server.ServerEnv
                     , Serv.Server.Core.Runtime
                     , Serv.Api.Types
  other-modules:       Servant.Extentions.Server
                     , Serv.Server.Core.InfoApi
                     , Serv.Server.Features.EntityHandler
                     , Serv.Util.GenericMonoid
                     , Serv.Util.Validate
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , async
                     , bytestring
                     , containers
                     , data-default-class
                     , ekg-core
                     , ekg-json
                     , fast-logger
                     , git-embed
                     , http-types
                     , lens
                     , mtl
                     , servant
                     , servant-server
                     , servant-swagger
                     , swagger2
                     , text
                     , yaml
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-middleware-metrics
                     , warp
  default-language:    Haskell2010

executable serv-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , serv
  default-language:    Haskell2010

test-suite serv-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , serv
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/orangefiredragon/serv
